--- a/.github/workflows/main_aplikacjadolosowania.yml
+++ b/.github/workflows/main_aplikacjadolosowania.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - AplikacjaDoLosowania
 
 on:
@@ -23,11 +20,17 @@ jobs:
         with:
           dotnet-version: '3.1'
 
+      - name: Restore dependencies
+        run: dotnet restore AplikacjaDoLosowania/AplikacjaDoLosowania.csproj
+
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build AplikacjaDoLosowania/AplikacjaDoLosowania.csproj --configuration Release
+
+      - name: Run Tests
+        run: dotnet test AplikacjaDoLosowania.Tests/AplikacjaDoLosowania.Tests.csproj
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish AplikacjaDoLosowania/AplikacjaDoLosowania.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,5 +67,4 @@ jobs:
         with:
           app-name: 'AplikacjaDoLosowania'
           slot-name: 'Production'
-          package: .
-          
+          package: ${{env.DOTNET_ROOT}}/myapp
