--- a/.github/workflows/main_aplikacjadolosowania.yml
+++ b/.github/workflows/main_aplikacjadolosowania.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '3.1'
+          dotnet-version: '6.0'  # Użyj wersji .NET 6.0 (lub tej, którą używasz)
 
       - name: Restore dependencies
         run: dotnet restore AplikacjaDoLosowania/AplikacjaDoLosowania.csproj
@@ -30,13 +30,13 @@ jobs:
         run: dotnet test AplikacjaDoLosowania.Tests/AplikacjaDoLosowania.Tests.csproj
 
       - name: dotnet publish
-        run: dotnet publish AplikacjaDoLosowania/AplikacjaDoLosowania.csproj -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish AplikacjaDoLosowania/AplikacjaDoLosowania.csproj -c Release -o './myapp'  # Zmieniona ścieżka
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: './myapp'  # Ścieżka do artefaktu, który jest publikowany
 
   deploy:
     runs-on: windows-latest
@@ -53,18 +53,18 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_EDF0B7F94621448CB0D9B548ABE4FFDE }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2C748BB0145047629A5E467567DEC1E8 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3C4EBFDB656846C2A37EEBDD13FDD0D5 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}  # Upewnij się, że zmienne w secret są poprawnie ustawione
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'AplikacjaDoLosowania'
+          app-name: 'AplikacjaDoLosowania'  # Upewnij się, że nazwa aplikacji jest poprawna
           slot-name: 'Production'
-          package: ${{env.DOTNET_ROOT}}/myapp
+          package: './myapp'  # Ścieżka do artefaktu, który ma zostać wdrożony
